--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -63,7 +63,7 @@ text-align: center;
   @media screen and (max-width:600px) {
 
     .services_container{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 1.5rem;
     }
     
