--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -150,7 +150,7 @@ header{
   header{ 
     height: 100vh;
 }
-.header_socials , .scroll_down{
-    display: none;
+ .scroll_down{
+    display:none;
 }
 }
